--- a/index.html
+++ b/index.html
@@ -9,6 +9,124 @@
     <link href="./index.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    
+    <header>
+        <h1>Checkers</h1>
+    </header>
+    <main>
+        <div class="score">
+            <h1>Score</h1>
+            <h2>Top Player Tokens Taken</h2>
+            <h3>0</h3>
+            <h2>Bottom Player Tokens Taken</h2>
+            <h3>0</h3>
+            <h2>Top Player Wins</h2>
+            <h3>0</h3>
+            <h2>Bottom Player Wins</h2>
+            <h3>0</h3>
+        </div>
+        <ul id="board">
+            <li>
+                <ul class="row">
+                    <li id="0-0" class="white-square"></li>
+                    <li id="0-1" class="black-square"></li>
+                    <li id="0-2" class="white-square"></li>
+                    <li id="0-3" class="black-square"></li>
+                    <li id="0-4" class="white-square"></li>
+                    <li id="0-5" class="black-square"></li>
+                    <li id="0-6" class="white-square"></li>
+                    <li id="0-7" class="black-square"></li>
+                </ul>
+            </li>
+            <li>
+                <ul class="row">
+                    <li id="1-0" class="black-square"></li>
+                    <li id="1-1" class="white-square"></li>
+                    <li id="1-2" class="black-square"></li>
+                    <li id="1-3" class="white-square"></li>
+                    <li id="1-4" class="black-square"></li>
+                    <li id="1-5" class="white-square"></li>
+                    <li id="1-6" class="black-square"></li>
+                    <li id="1-7" class="white-square"></li>
+                </ul>
+            </li>
+            <li>
+                <ul class="row">
+                    <li id="2-0" class="white-square"></li>
+                    <li id="2-1" class="black-square"></li>
+                    <li id="2-2" class="white-square"></li>
+                    <li id="2-3" class="black-square"></li>
+                    <li id="2-4" class="white-square"></li>
+                    <li id="2-5" class="black-square"></li>
+                    <li id="2-6" class="white-square"></li>
+                    <li id="2-7" class="black-square"></li>
+                </ul>
+            </li>
+            <li>
+                <ul class="row">
+                    <li id="3-0" class="black-square"></li>
+                    <li id="3-1" class="white-square"></li>
+                    <li id="3-2" class="black-square"></li>
+                    <li id="3-3" class="white-square"></li>
+                    <li id="3-4" class="black-square"></li>
+                    <li id="3-5" class="white-square"></li>
+                    <li id="3-6" class="black-square"></li>
+                    <li id="3-7" class="white-square"></li>
+                </ul>
+            </li>
+            <li>
+                <ul class="row">
+                    <li id="4-0" class="white-square"></li>
+                    <li id="4-1" class="black-square"></li>
+                    <li id="4-2" class="white-square"></li>
+                    <li id="4-3" class="black-square"></li>
+                    <li id="4-4" class="white-square"></li>
+                    <li id="4-5" class="black-square"></li>
+                    <li id="4-6" class="white-square"></li>
+                    <li id="4-7" class="black-square"></li>
+                </ul>
+            </li>
+            <li>
+                <ul class="row">
+                    <li id="5-0" class="black-square"></li>
+                    <li id="5-1" class="white-square"></li>
+                    <li id="5-2" class="black-square"></li>
+                    <li id="5-3" class="white-square"></li>
+                    <li id="5-4" class="black-square"></li>
+                    <li id="5-5" class="white-square"></li>
+                    <li id="5-6" class="black-square"></li>
+                    <li id="5-7" class="white-square"></li>
+                </ul>
+            </li>
+            <li>
+                <ul class="row">
+                    <li id="6-0" class="white-square"></li>
+                    <li id="6-1" class="black-square"></li>
+                    <li id="6-2" class="white-square"></li>
+                    <li id="6-3" class="black-square"></li>
+                    <li id="6-4" class="white-square"></li>
+                    <li id="6-5" class="black-square"></li>
+                    <li id="6-6" class="white-square"></li>
+                    <li id="6-7" class="black-square"></li>
+                </ul>
+            </li>
+            <li>
+                <ul class="row">
+                    <li id="7-0" class="black-square"></li>
+                    <li id="7-1" class="white-square"></li>
+                    <li id="7-2" class="black-square"></li>
+                    <li id="7-3" class="white-square"></li>
+                    <li id="7-4" class="black-square"></li>
+                    <li id="7-5" class="white-square"></li>
+                    <li id="7-6" class="black-square"></li>
+                    <li id="7-7" class="white-square"></li>
+                </ul>
+            </li>
+        </ul>
+        <div class="options">
+            <h1>Options</h1>
+            <button>Start/Reset Game</button>
+            <button>Reset Score</button>
+        </div>
+    </main>
 </body>
 </html>
