Start/Reset button works

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div class="score">
             <h1>Score</h1>
             <h2>Top Player Tokens Taken</h2>
-            <h3>0</h3>
+            <h3 id="top-tokens">0</h3>
             <h2>Bottom Player Tokens Taken</h2>
-            <h3>0</h3>
+            <h3 id="bottom-tokens">0</h3>
             <h2>Top Player Wins</h2>
-            <h3>0</h3>
+            <h3 id="top-wins">0</h3>
             <h2>Bottom Player Wins</h2>
-            <h3>0</h3>
+            <h3 id="bottom-wins">0</h3>
         </div>
         <ul id="board">
             <li>
@@ -124,8 +124,8 @@
         </ul>
         <div class="options">
             <h1>Options</h1>
-            <button>Start/Reset Game</button>
-            <button>Reset Score</button>
+            <button id="board-reset">Start/Reset Game</button>
+            <button id="score-reset">Reset Score</button>
         </div>
     </main>
     <script src="./index.js"></script>
