Stuck on changing piece colors

--- a/index.html
+++ b/index.html
@@ -27,98 +27,98 @@
         <ul id="board">
             <li>
                 <ul class="row">
-                    <li id="0-0" class="white-square"></li>
-                    <li id="0-1" class="black-square"></li>
-                    <li id="0-2" class="white-square"></li>
-                    <li id="0-3" class="black-square"></li>
-                    <li id="0-4" class="white-square"></li>
-                    <li id="0-5" class="black-square"></li>
-                    <li id="0-6" class="white-square"></li>
-                    <li id="0-7" class="black-square"></li>
+                    <li id="0-0" class="square white-square"></li>
+                    <li id="0-1" class="square black-square"></li>
+                    <li id="0-2" class="square white-square"></li>
+                    <li id="0-3" class="square black-square"></li>
+                    <li id="0-4" class="square white-square"></li>
+                    <li id="0-5" class="square black-square"></li>
+                    <li id="0-6" class="square white-square"></li>
+                    <li id="0-7" class="square black-square"></li>
                 </ul>
             </li>
             <li>
                 <ul class="row">
-                    <li id="1-0" class="black-square"></li>
-                    <li id="1-1" class="white-square"></li>
-                    <li id="1-2" class="black-square"></li>
-                    <li id="1-3" class="white-square"></li>
-                    <li id="1-4" class="black-square"></li>
-                    <li id="1-5" class="white-square"></li>
-                    <li id="1-6" class="black-square"></li>
-                    <li id="1-7" class="white-square"></li>
+                    <li id="1-0" class="square black-square"></li>
+                    <li id="1-1" class="square white-square"></li>
+                    <li id="1-2" class="square black-square"></li>
+                    <li id="1-3" class="square white-square"></li>
+                    <li id="1-4" class="square black-square"></li>
+                    <li id="1-5" class="square white-square"></li>
+                    <li id="1-6" class="square black-square"></li>
+                    <li id="1-7" class="square white-square"></li>
                 </ul>
             </li>
             <li>
                 <ul class="row">
-                    <li id="2-0" class="white-square"></li>
-                    <li id="2-1" class="black-square"></li>
-                    <li id="2-2" class="white-square"></li>
-                    <li id="2-3" class="black-square"></li>
-                    <li id="2-4" class="white-square"></li>
-                    <li id="2-5" class="black-square"></li>
-                    <li id="2-6" class="white-square"></li>
-                    <li id="2-7" class="black-square"></li>
+                    <li id="2-0" class="square white-square"></li>
+                    <li id="2-1" class="square black-square"></li>
+                    <li id="2-2" class="square white-square"></li>
+                    <li id="2-3" class="square black-square"></li>
+                    <li id="2-4" class="square white-square"></li>
+                    <li id="2-5" class="square black-square"></li>
+                    <li id="2-6" class="square white-square"></li>
+                    <li id="2-7" class="square black-square"></li>
                 </ul>
             </li>
             <li>
                 <ul class="row">
-                    <li id="3-0" class="black-square"></li>
-                    <li id="3-1" class="white-square"></li>
-                    <li id="3-2" class="black-square"></li>
-                    <li id="3-3" class="white-square"></li>
-                    <li id="3-4" class="black-square"></li>
-                    <li id="3-5" class="white-square"></li>
-                    <li id="3-6" class="black-square"></li>
-                    <li id="3-7" class="white-square"></li>
+                    <li id="3-0" class="square black-square"></li>
+                    <li id="3-1" class="square white-square"></li>
+                    <li id="3-2" class="square black-square"></li>
+                    <li id="3-3" class="square white-square"></li>
+                    <li id="3-4" class="square black-square"></li>
+                    <li id="3-5" class="square white-square"></li>
+                    <li id="3-6" class="square black-square"></li>
+                    <li id="3-7" class="square white-square"></li>
                 </ul>
             </li>
             <li>
                 <ul class="row">
-                    <li id="4-0" class="white-square"></li>
-                    <li id="4-1" class="black-square"></li>
-                    <li id="4-2" class="white-square"></li>
-                    <li id="4-3" class="black-square"></li>
-                    <li id="4-4" class="white-square"></li>
-                    <li id="4-5" class="black-square"></li>
-                    <li id="4-6" class="white-square"></li>
-                    <li id="4-7" class="black-square"></li>
+                    <li id="4-0" class="square white-square"></li>
+                    <li id="4-1" class="square black-square"></li>
+                    <li id="4-2" class="square white-square"></li>
+                    <li id="4-3" class="square black-square"></li>
+                    <li id="4-4" class="square white-square"></li>
+                    <li id="4-5" class="square black-square"></li>
+                    <li id="4-6" class="square white-square"></li>
+                    <li id="4-7" class="square black-square"></li>
                 </ul>
             </li>
             <li>
                 <ul class="row">
-                    <li id="5-0" class="black-square"></li>
-                    <li id="5-1" class="white-square"></li>
-                    <li id="5-2" class="black-square"></li>
-                    <li id="5-3" class="white-square"></li>
-                    <li id="5-4" class="black-square"></li>
-                    <li id="5-5" class="white-square"></li>
-                    <li id="5-6" class="black-square"></li>
-                    <li id="5-7" class="white-square"></li>
+                    <li id="5-0" class="square black-square"></li>
+                    <li id="5-1" class="square white-square"></li>
+                    <li id="5-2" class="square black-square"></li>
+                    <li id="5-3" class="square white-square"></li>
+                    <li id="5-4" class="square black-square"></li>
+                    <li id="5-5" class="square white-square"></li>
+                    <li id="5-6" class="square black-square"></li>
+                    <li id="5-7" class="square white-square"></li>
                 </ul>
             </li>
             <li>
                 <ul class="row">
-                    <li id="6-0" class="white-square"></li>
-                    <li id="6-1" class="black-square"></li>
-                    <li id="6-2" class="white-square"></li>
-                    <li id="6-3" class="black-square"></li>
-                    <li id="6-4" class="white-square"></li>
-                    <li id="6-5" class="black-square"></li>
-                    <li id="6-6" class="white-square"></li>
-                    <li id="6-7" class="black-square"></li>
+                    <li id="6-0" class="square white-square"></li>
+                    <li id="6-1" class="square black-square"></li>
+                    <li id="6-2" class="square white-square"></li>
+                    <li id="6-3" class="square black-square"></li>
+                    <li id="6-4" class="square white-square"></li>
+                    <li id="6-5" class="square black-square"></li>
+                    <li id="6-6" class="square white-square"></li>
+                    <li id="6-7" class="square black-square"></li>
                 </ul>
             </li>
             <li>
                 <ul class="row">
-                    <li id="7-0" class="black-square"></li>
-                    <li id="7-1" class="white-square"></li>
-                    <li id="7-2" class="black-square"></li>
-                    <li id="7-3" class="white-square"></li>
-                    <li id="7-4" class="black-square"></li>
-                    <li id="7-5" class="white-square"></li>
-                    <li id="7-6" class="black-square"></li>
-                    <li id="7-7" class="white-square"></li>
+                    <li id="7-0" class="square black-square"></li>
+                    <li id="7-1" class="square white-square"></li>
+                    <li id="7-2" class="square black-square"></li>
+                    <li id="7-3" class="square white-square"></li>
+                    <li id="7-4" class="square black-square"></li>
+                    <li id="7-5" class="square white-square"></li>
+                    <li id="7-6" class="square black-square"></li>
+                    <li id="7-7" class="square white-square"></li>
                 </ul>
             </li>
         </ul>
@@ -126,6 +126,16 @@
             <h1>Options</h1>
             <button id="board-reset">Start/Reset Game</button>
             <button id="score-reset">Reset Score</button>
+            <h2>Top Player Color</h2>
+            <div><input type="radio" name="top-color" value="salmon" checked="checked">Salmon<br></div>
+            <div><input type="radio" name="top-color" value="rgb(255, 243, 133)">Yellow<br></div>
+            <div><input type="radio" name="top-color" value="lightblue">Blue<br></div>
+            <div><input type="radio" name="top-color" value="salmon">Salmon<br></div>
+            <h2>Bottom Player Color</h2>
+            <div><input type="radio" name="bottom-color" value="salmon">Salmon<br></div>
+            <div><input type="radio" name="bottom-color" value="rgb(255, 243, 133)" checked="checked">Yellow<br></div>
+            <div><input type="radio" name="bottom-color" value="lightblue">Blue<br></div>
+            <div><input type="radio" name="bottom-color" value="salmon">Salmon<br></div>
         </div>
     </main>
     <script src="./index.js"></script>
